--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     url: jdbc:mysql://localhost:3306/exam_prep1_db?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     open-in-view: false
     properties:
       hibernate:
